Комментарии на страницах с просмотром данных о котах, добавлением и редактированием котов

--- a/WpfApp2/Pages/AdminPage.xaml
+++ b/WpfApp2/Pages/AdminPage.xaml
@@ -12,7 +12,7 @@
         <StackPanel>
             <Button Name="btnShowUser" Click="btnShowUser_Click">Просмотр списка пользователей</Button>
             <Button Name="btnPrivateUser" Click="btnPrivateUser_Click" Visibility="Collapsed">Скрыть список пользователей</Button>
-            <DataGrid Visibility="Collapsed" Name="dgUsers" FontSize="20" AutoGenerateColumns="False" CanUserAddRows="False" HorizontalAlignment="Center">
+            <DataGrid ColumnWidth="*" Visibility="Collapsed" Name="dgUsers" FontSize="20" AutoGenerateColumns="False" CanUserAddRows="False" HorizontalAlignment="Center">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Фамилия" Binding="{Binding Surname}"></DataGridTextColumn>
                     <DataGridTextColumn Header="Имя" Binding="{Binding Name}"></DataGridTextColumn>
