Создание личного кабинета пользователя. Создание окна. Редактирование личных данных пользовтелей. Добавление картинки в базу данных

--- a/WpfApp2/Pages/AdminPage.xaml
+++ b/WpfApp2/Pages/AdminPage.xaml
@@ -22,6 +22,7 @@
                 </DataGrid.Columns>
             </DataGrid>
             <Button Name="btnShowCats" Click="btnShowCats_Click">Просмотр списка котов</Button>
+            <Button Name="btnPersonal" Click="btnPersonal_Click">Перейти в личный кабинет</Button>
             <Button Name="btnmain" Click="btnmain_Click">Вернуться на главную страницу</Button>
         </StackPanel>
     </Grid>
